tests/NormalTests/paczka1/small_fuzzy/39433588.err
Error in line 8: p36h252 S937 74,0
Error in line 1: S937 S937 14,9
